--- a/src/child-element1.html
+++ b/src/child-element1.html
@@ -26,6 +26,7 @@
         prop1: {
           type: String,
           notify: true,
+          reflectToAttribute: true,
           value: "defaultvalue"
         }
       }
