--- a/src/root-element.html
+++ b/src/root-element.html
@@ -24,8 +24,11 @@
   <script>
     Polymer({
       is: "root-element",
-      properties: {
-        prop1: String
+      prop1: {
+        type: String,
+        notify: true,
+        reflectToAttribute: true,
+        value: "defaultvalue-root"
       }
     });
   </script>
