--- a/src/child-element1.html
+++ b/src/child-element1.html
@@ -26,10 +26,8 @@
       is: "child-element1",
       properties: {
         prop1: {
-          type: Number,
-          notify: true,
-          reflectToAttribute: true,
-          value: 0
+          type: String,
+          notify: true
         }
       }
     });
